metadata-retriever/metadata/objects/Address__c.object
<CustomObject>
    <description>Stores all addresses linked to a customer (individual company)</description>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>Address Line 1</description>
        <label>Address Line 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>Address Line 2</description>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <description>address type</description>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mailing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Prev Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>​Site address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postal address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 1 -Main Location Sales, Service &amp; Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 2 -Main Location Sales Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 3 -Main Location Service &amp; Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 4 -Additional Sales location not within Site 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 5 -Additional Sales location not within Site 1 or Site 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 6 -Additional Sales, Service &amp; Parts location not within Site 1 or Site 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 7 -Service &amp; Parts ONLY Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 8 -Only Parts Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 9 -Auto Body</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>The customer (Individual or company) that has one or several addresses</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Person Account, Company, Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LDCL_Address_ID__c</fullName>
        <externalId>true</externalId>
        <label>LDCL Address ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <description>Post Code</description>
        <label>Post Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>the address marked as preferred will be displayed in the address section of the customer (individual/company)Trigger for the calculation of the preferred address
-- The mailing status of an address that is marked as preferred address changes to  &quot;DEADMAIL&quot;, &quot;INCOMPLETE&quot; ==&gt;   triggers the &quot;preferred address calculation&quot;, but only in case there are more than one addresses available.
-- A user creates a new address and save it.
-- A user changes something on an existing address and save it.</description>
        <label>Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>States of Australia</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <description>Suburb</description>
        <label>Suburb</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Customer__c</columns>
        <columns>Address_Line_1__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Post_Code__c</columns>
        <columns>Preferred__c</columns>
        <columns>Status__c</columns>
        <columns>Suburb__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A{000000}</displayFormat>
        <label>Address Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>Company</fullName>
        <active>true</active>
        <description>For Company Account</description>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <label>Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <description>For Person Account</description>
        <label>Individual</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CheckedState</fullName>
        <active>true</active>
        <description>State (only if country is equal to Australia)</description>
        <errorConditionFormula>AND(ISPICKVAL(Country__c, &apos;Australia&apos;),
ISPICKVAL(State__c, &apos;&apos;),
$Profile.Name != &apos;IntegrationAPI&apos; 
)</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>State is a mandatory fields when your Country is Australia.</errorMessage>
    </validationRules>
</CustomObject>